--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "ip2location/ip2location",
+    "name": "ip2location/ip2location-php",
     "description": "IP2Location PHP API to get location info from IPv4 and IPv6 address.",
     "keywords": ["ip2location", "ip2locationlite", "geolocation", "ip"],
     "homepage": "http://www.ip2location.com",
