--- a/composer.json
+++ b/composer.json
@@ -1,18 +1,23 @@
 {
-    "name": "ip2location/ip2location-php",
-    "description": "[Official Release] IP2Location PHP API to get location info from IPv4 and IPv6 address.",
-    "keywords": ["ip2location", "ip2locationlite", "geolocation", "ip geolocation", "isp", "time zone", "mnc", "mcc", "usage type", "zip code", "area code"],
-    "homepage": "https://www.ip2location.com",
-    "type": "library",
-    "license": "MIT",
-    "autoload": {
-        "classmap": ["IP2Location.php"]
-    },
-    "authors": [
-        {
-        "name": "IP2Location",
-        "email": "support@ip2location.com",
-        "homepage": "https://www.ip2location.com"
-        }
-    ]
+	"name": "ip2location/ip2location-php",
+	"description": "[Official Release] IP2Location PHP API to get location info from IPv4 and IPv6 address.",
+	"keywords": ["ip2location", "ip2locationlite", "geolocation", "ip geolocation", "isp", "time zone", "mnc", "mcc", "usage type", "zip code", "area code"],
+	"homepage": "https://www.ip2location.com",
+	"type": "library",
+	"license": "MIT",
+	"authors": [
+		{
+		"name": "IP2Location",
+		"email": "support@ip2location.com",
+		"homepage": "https://www.ip2location.com"
+		}
+	],
+	"autoload": {
+		"classmap": [
+			"IP2Location.php"
+		]
+	},
+	"require-dev": {
+		"phpunit/phpunit": "^9"
+	}
 }
