Added require extension in composer.json.

--- a/composer.json
+++ b/composer.json
@@ -19,5 +19,10 @@
 	},
 	"require-dev": {
 		"phpunit/phpunit": "^9"
+	},
+	"require": {
+		"php": ">=5.4.0",
+		"ext-curl": "*",
+		"ext-gmp": "*"
 	}
 }
