--- a/composer.json
+++ b/composer.json
@@ -7,22 +7,24 @@
 	"license": "MIT",
 	"authors": [
 		{
-		"name": "IP2Location",
-		"email": "support@ip2location.com",
-		"homepage": "https://www.ip2location.com"
+			"name": "IP2Location",
+			"email": "support@ip2location.com",
+			"homepage": "https://www.ip2location.com"
 		}
 	],
-	"autoload": {
-		"classmap": [
-			"IP2Location.php"
-		]
-	},
 	"require-dev": {
-		"phpunit/phpunit": "^9"
+		"phpunit/phpunit": "^9.5"
 	},
 	"require": {
-		"php": ">=5.4.0",
+		"php": ">=7.2",
+		"ext-bcmath": "*",
 		"ext-curl": "*",
-		"ext-gmp": "*"
+		"ext-gmp": "*",
+		"ext-json": "*"
+	},
+	"autoload": {
+		"psr-4": {
+			"IP2Location\\": "src"
+		}
 	}
 }
