--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,5 +30,13 @@ jobs:
       - name: Install Composer dependencies
         run: composer install --no-progress --prefer-dist
 
+      - name: Install PHPUnit
+        run: |
+          if [[ "${{ matrix.php-version }}" == "7.2" ]]; then
+            composer require --dev phpunit/phpunit:^8;
+          else
+            composer require --dev phpunit/phpunit:^9.5;
+          fi  
+
       - name: Run tests
         run: vendor/bin/phpunit
