--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,9 +30,8 @@ jobs:
       - name: Install Composer dependencies
         run: |
           if [ "${{ matrix.php-version }}" = "7.2" ]; then
-            composer require --dev phpunit/phpunit:^8.0
+            composer require --dev phpunit/phpunit:^8.0 --no-update
           fi
-          composer run-script set-platform
           composer install --no-progress --prefer-dist
 
       - name: Run tests
